--- a/springboot-project/src/main/resources/application.properties
+++ b/springboot-project/src/main/resources/application.properties
@@ -1,7 +1,25 @@
 spring.application.name=demo
-server.port=8190
+
+spring.jpa.database=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+# Configuración de la base de datos PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/twitterDemo
+spring.datasource.username=admin
 spring.datasource.password=admin
-spring.datasource.url=jdbc:postgresql://localhost:5432/ncapas
-spring.jpa.hibernate.ddl-auto=create-drop
+
+# Configuración JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+
+# Configuración de logging
+logging.level.com.twitter.demo=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+
+spring.main.banner-mode=off
