--- a/springboot-project/src/main/resources/application.properties
+++ b/springboot-project/src/main/resources/application.properties
@@ -1,25 +1,24 @@
 spring.application.name=demo
 
+
 spring.jpa.database=postgresql
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+#spring.datasource.url=jdbc:postgresql://localhost:5432/twitterDemo
+spring.datasource.url=jdbc:postgresql://localhost:5432/Yggdrasillnn
+#spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/Yggdrasillnn
 
-# Configuración de la base de datos PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/twitterDemo
 spring.datasource.username=admin
 spring.datasource.password=admin
 
-# Configuración JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-
+#Sirve para inicializar la base de datos y validar si ya estan creados los datos de un data initializer
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 # Configuración de logging
 logging.level.com.twitter.demo=DEBUG
 logging.level.org.springframework.security=DEBUG
 
-
-spring.main.banner-mode=off
